Fix z-index on navbar sticky with the sidebar sticky on post.show. Fix createdAt and avar_link_url on factory and entity

--- a/assets/styles/layout/_navbar.scss
+++ b/assets/styles/layout/_navbar.scss
@@ -1,6 +1,7 @@
 // Navbar
 .main-navbar {
     background-color: $background-color;
+    z-index: 1100;
     @include box-shadow();
 }
 
